--- a/index.html
+++ b/index.html
@@ -559,7 +559,7 @@
 
         <div class="section-title">
           <h2>Contact</h2>
-          <p>You can stay connected and keep in touch.</p>
+          <p>You can stay connected & keep in touch.</p>
         </div>
 
         <div class="row" data-aos="fade-in">
